// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Max shell > renders the English shell and an actionable empty page 1`] = `
<div
  class="app-frame"
>
  <header
    class="topbar"
  >
    <div
      class="topbar__title"
    >
      <p>
        Test Shop · 
        Workspace
         /
      </p>
      <strong>
        Items
      </strong>
    </div>
    <div
      class="topbar__actions"
    >
      <button
        class="command-trigger"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-search"
          fill="none"
          height="17"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="17"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 21-4.34-4.34"
          />
          <circle
            cx="11"
            cy="11"
            r="8"
          />
        </svg>
        <span>
          Search commands
        </span>
        <kbd>
          Ctrl
           K
        </kbd>
      </button>
      <div
        class="create-menu"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="button button--primary"
          type="button"
        >
          <span
            class="button__icon"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-plus"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
          </span>
          <span
            class="button__label"
          >
            New
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down button__chevron"
              fill="none"
              height="15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </header>
  <main
    aria-labelledby="page-title"
    class="content"
    id="main-content"
    tabindex="-1"
  >
    <header
      class="page-header"
    >
      <div>
        <p
          class="eyebrow"
        >
          Workspace
        </p>
        <h1
          id="page-title"
        >
          Items
        </h1>
        <p>
          Universal items shaped by configurable properties.
        </p>
      </div>
    </header>
    <section
      class="object-workspace"
    >
      <div
        class="object-toolbar"
      >
        <div>
          <strong>
            0
             
            records
          </strong>
          <span>
            0
             
            properties
             · 
            0
             
            templates
          </span>
        </div>
        <button
          class="button button--primary"
          type="button"
        >
          <span
            class="button__icon"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-plus"
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="17"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
          </span>
          <span
            class="button__label"
          >
            Create item
          </span>
        </button>
      </div>
      <div
        class="object-layout"
      >
        <div
          aria-busy="false"
          class="record-panel"
        >
          <div
            class="object-empty"
          >
            <div
              class="empty-state__icon"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-plus"
                fill="none"
                height="25"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="25"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
            </div>
            <h2>
              No items yet
            </h2>
            <p>
              Create the first record or configure properties for the way this shop works.
            </p>
            <button
              class="button button--primary"
              type="button"
            >
              <span
                class="button__label"
              >
                Create item
              </span>
            </button>
          </div>
          <div
            class="record-grid"
          />
        </div>
        <aside
          class="schema-panel"
        >
          <div
            class="schema-panel__tabs"
            role="tablist"
          >
            <button
              aria-selected="true"
              class="schema-tab-button"
              data-active="true"
              role="tab"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-sliders-horizontal"
                fill="none"
                height="15"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="15"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 5H3"
                />
                <path
                  d="M12 19H3"
                />
                <path
                  d="M14 3v4"
                />
                <path
                  d="M16 17v4"
                />
                <path
                  d="M21 12h-9"
                />
                <path
                  d="M21 19h-5"
                />
                <path
                  d="M21 5h-7"
                />
                <path
                  d="M8 10v4"
                />
                <path
                  d="M8 12H3"
                />
              </svg>
              <span>
                Properties
              </span>
            </button>
            <button
              aria-selected="false"
              class="schema-tab-button"
              data-active="false"
              role="tab"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-file-text"
                fill="none"
                height="15"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="15"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
                />
                <path
                  d="M14 2v5a1 1 0 0 0 1 1h5"
                />
                <path
                  d="M10 9H8"
                />
                <path
                  d="M16 13H8"
                />
                <path
                  d="M16 17H8"
                />
              </svg>
              <span>
                Templates
              </span>
            </button>
          </div>
          <div
            class="schema-panel__head"
          >
            <div>
              <span
                class="eyebrow"
              >
                Schema
              </span>
              <h2>
                Properties
              </h2>
            </div>
            <button
              aria-label="Add property"
              class="icon-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-plus"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
            </button>
          </div>
          <p
            class="schema-panel__summary"
          >
            Configuration is stored as data, never hardcoded shop fields.
          </p>
          <div
            class="schema-empty"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-sliders-horizontal"
              fill="none"
              height="21"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="21"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 5H3"
              />
              <path
                d="M12 19H3"
              />
              <path
                d="M14 3v4"
              />
              <path
                d="M16 17v4"
              />
              <path
                d="M21 12h-9"
              />
              <path
                d="M21 19h-5"
              />
              <path
                d="M21 5h-7"
              />
              <path
                d="M8 10v4"
              />
              <path
                d="M8 12H3"
              />
            </svg>
            <strong>
              No custom properties
            </strong>
            <p>
              The display name works now. Add only the fields this shop actually needs.
            </p>
            <button
              class="button button--secondary"
              type="button"
            >
              <span
                class="button__label"
              >
                Add property
              </span>
            </button>
          </div>
          <div
            class="property-list"
          />
        </aside>
      </div>
      <div
        class="overlay"
      >
        <div
          aria-labelledby="record-dialog-title"
          aria-modal="true"
          class="overlay__panel object-dialog"
          role="dialog"
          tabindex="-1"
        >
          <header
            class="dialog-header"
          >
            <div>
              <p
                class="eyebrow"
              >
                MAX · 
                Schema
              </p>
              <h2
                id="record-dialog-title"
              >
                Create item
              </h2>
            </div>
            <button
              aria-label="Close"
              class="icon-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-x"
                fill="none"
                height="19"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="19"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 6 6 18"
                />
                <path
                  d="m6 6 12 12"
                />
              </svg>
            </button>
          </header>
          <form
            class="object-form"
          >
            <label
              class="field"
            >
              <span>
                Display name
              </span>
              <input
                data-autofocus="true"
                maxlength="120"
                placeholder="A clear name for this item"
                required=""
                value=""
              />
            </label>
            <footer
              class="form-footer"
            >
              <button
                class="button button--secondary"
                type="button"
              >
                <span
                  class="button__label"
                >
                  Cancel
                </span>
              </button>
              <button
                class="button button--primary"
                type="submit"
              >
                <span
                  class="button__label"
                >
                  Save
                </span>
              </button>
            </footer>
          </form>
        </div>
      </div>
    </section>
  </main>
</div>
`;

exports[`Max shell > switches the complete shell to Arabic and RTL 1`] = `
<div
  class="app-frame"
>
  <header
    class="topbar"
  >
    <div
      class="topbar__title"
    >
      <p>
        Test Shop · 
        مساحة العمل
         /
      </p>
      <strong>
        الرئيسية
      </strong>
    </div>
    <div
      class="topbar__actions"
    >
      <button
        class="command-trigger"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-search"
          fill="none"
          height="17"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="17"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 21-4.34-4.34"
          />
          <circle
            cx="11"
            cy="11"
            r="8"
          />
        </svg>
        <span>
          البحث في الأوامر
        </span>
        <kbd>
          Ctrl
           K
        </kbd>
      </button>
      <div
        class="create-menu"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="button button--primary"
          type="button"
        >
          <span
            class="button__icon"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-plus"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
          </span>
          <span
            class="button__label"
          >
            جديد
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down button__chevron"
              fill="none"
              height="15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </header>
  <main
    aria-labelledby="page-title"
    class="content"
    id="main-content"
    tabindex="-1"
  >
    <header
      class="page-header"
    >
      <div>
        <p
          class="eyebrow"
        >
          مساحة العمل
        </p>
        <h1
          id="page-title"
        >
          الرئيسية
        </h1>
        <p>
          نقطة بداية هادئة للعمل المهم اليوم.
        </p>
      </div>
    </header>
    <div
      class="home-page"
    >
      <section
        class="home-hero"
      >
        <div
          aria-hidden="true"
          class="home-hero__glow"
        />
        <p
          class="eyebrow"
        >
          MAX · LOCAL WORKSPACE
        </p>
        <h2>
          متجرُك، بطريقتك
        </h2>
        <p>
          يعمل ماكس محليًا ويتشكل حسب إعدادات متجرك.
        </p>
        <div
          class="home-hero__actions"
        >
          <button
            class="button button--primary"
            type="button"
          >
            <span
              class="button__icon"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-package"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
                />
                <path
                  d="M12 22V12"
                />
                <polyline
                  points="3.29 7 12 12 20.71 7"
                />
                <path
                  d="m7.5 4.27 9 5.15"
                />
              </svg>
            </span>
            <span
              class="button__label"
            >
              استكشف العناصر
            </span>
          </button>
          <button
            class="button button--secondary"
            type="button"
          >
            <span
              class="button__icon"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-search"
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21 21-4.34-4.34"
                />
                <circle
                  cx="11"
                  cy="11"
                  r="8"
                />
              </svg>
            </span>
            <span
              class="button__label"
            >
              افتح قائمة الأوامر
            </span>
          </button>
        </div>
      </section>
      <section
        aria-label="مساحة العمل"
        class="principle-grid"
      >
        <article
          class="principle-card"
        >
          <span
            class="principle-card__number"
          >
            0
            1
          </span>
          <h3>
            محلي افتراضيًا
          </h3>
          <p>
            تبقى مساحة SQLite هي المرجع وتعمل من دون اتصال بالإنترنت.
          </p>
        </article>
        <article
          class="principle-card"
        >
          <span
            class="principle-card__number"
          >
            0
            2
          </span>
          <h3>
            جاهز للتخصيص
          </h3>
          <p>
            واجهة العمل جاهزة، وبنية المتجر ما زالت منفصلة عن قصد.
          </p>
        </article>
        <article
          class="principle-card"
        >
          <span
            class="principle-card__number"
          >
            0
            3
          </span>
          <h3>
            مصمم للسرعة
          </h3>
          <p>
            مسارات لوحة المفاتيح والإجراءات المركزة متاحة في كل مكان.
          </p>
        </article>
      </section>
      <section
        class="keyboard-note"
      >
        <kbd>
          Tab
        </kbd>
        <kbd>
          Enter
        </kbd>
        <kbd>
          Esc
        </kbd>
        <kbd>
          ↑ ↓
        </kbd>
        <div>
          <strong>
            لوحة المفاتيح
          </strong>
          <p>
            ينتقل Tab للأمام ويفعّل Enter ويغلق Escape وتتنقل الأسهم داخل القوائم.
          </p>
        </div>
      </section>
    </div>
  </main>
</div>
`;
